// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsageAndChargesItem renders correctly 1`] = `
<div class="usage-charges-item-container">
  <div class="usage-charges-item-container__summary">
    <div class="usage-charges-item-container__summary__name-container">
      <chargeshideicon-stub></chargeshideicon-stub> <span></span>
    </div> <span class="usage-charges-item-container__summary__amount">
            Estimated Total USD $0.00
        </span>
  </div>
  <!---->
</div>
`;

exports[`UsageAndChargesItem toggling dropdown works correctly 1`] = `
<div class="usage-charges-item-container">
  <div class="usage-charges-item-container__summary">
    <div class="usage-charges-item-container__summary__name-container">
      <chargesexpandicon-stub></chargesexpandicon-stub> <span></span>
    </div> <span class="usage-charges-item-container__summary__amount">
            Estimated Total USD $3.00
        </span>
  </div>
  <div class="usage-charges-item-container__detailed-info-container">
    <div class="usage-charges-item-container__detailed-info-container__info-header"><span class="resource-header">RESOURCE</span> <span class="period-header">PERIOD</span> <span class="usage-header">USAGE</span> <span class="cost-header">COST</span></div>
    <div class="usage-charges-item-container__detailed-info-container__content-area">
      <div class="usage-charges-item-container__detailed-info-container__content-area__resource-container">
        <p>Storage ($0.010 per Gigabyte-Month)</p>
        <p>Egress ($0.045 per GB)</p>
        <p>Objects ($0.0000022 per Object-Month)</p>
      </div>
      <div class="usage-charges-item-container__detailed-info-container__content-area__period-container">
        <p>Feb 1 - Feb 1</p>
        <p>Feb 1 - Feb 1</p>
        <p>Feb 1 - Feb 1</p>
      </div>
      <div class="usage-charges-item-container__detailed-info-container__content-area__usage-container">
        <p>0.00 Gigabyte-month</p>
        <p>0.10 KB</p>
        <p>0.14 Object-month</p>
      </div>
      <div class="usage-charges-item-container__detailed-info-container__content-area__cost-container">
        <p class="price">USD $1.00</p>
        <p class="price">USD $1.00</p>
        <p class="price">USD $1.00</p>
      </div>
    </div>
    <div class="usage-charges-item-container__detailed-info-container__link-container"><span class="usage-charges-item-container__detailed-info-container__link-container__link">
                Advanced Report -&gt;
            </span></div>
  </div>
</div>
`;

exports[`UsageAndChargesItem toggling dropdown works correctly 2`] = `
<div class="usage-charges-item-container">
  <div class="usage-charges-item-container__summary">
    <div class="usage-charges-item-container__summary__name-container">
      <chargeshideicon-stub></chargeshideicon-stub> <span></span>
    </div> <span class="usage-charges-item-container__summary__amount">
            Estimated Total USD $3.00
        </span>
  </div>
  <!---->
</div>
`;
